# chainlib-rs

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  build.rs
.github/workflows/: chainlib.yml
example/: example.rs  example_ledger.rs  example_mnemonic.rs  example_protobuf.rs
examples/: example_amino.rs  example_protobuf.rs
src/: client.rs  config.rs  constant.rs  error.rs  key_service.rs  ledger_app.rs  lib.rs  message.rs  proto.rs  tx_builder.rs  types.rs
src/hd_wallet/: mnemonic.rs
src/key_service/: ledger_service.rs  mod.rs  private_key_service.rs
src/message/: amino.rs  mod.rs
src/tx_builder/: amino.rs  grpc.rs  mod.rs
src/types/: address.rs  basic.rs  key.rs  signature.rs  transaction.rs
src/utils/: codec.rs  ledger_crypto.rs
