[package]
name = "cro-sign-tool"
version = "0.1.0"
authors = ["linfeng <linfeng@crypto.com>"]
edition = "2018"
autoexamples = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
sorted-json = "0.1"
serde_json = "1.0"
secp256k1 = { version = "0.17", default-features = false, features = ["rand"] }
tiny-bip39 = "0.8"
anyhow = { version = "1.0", features = ["std"] }
hdwallet = "0.2"
bitcoin_hashes = "0.9"
rand = "0.7"
base64 = "0.13"
stdtx = "0.4.0"
thiserror = "1.0"
tokio = { version = "0.2", features = ["full"] }
ledger-crypto = { git = "https://github.com/crypto-com/ledger-crypto-rs", branch = "master" }
ledger-transport = { git = "https://github.com/Zondax/ledger-rs.git", branch = "master" }
zx-bip44 = { git = "https://github.com/Zondax/blockchain-tools-rs" }
reqwest = { version = "0.10.9", features = ["json"] }
async-trait = "0.1"
log = "0.4"
tonic = "0.3.1"
eyre = "0.6.4"
signature = "1.2.2"
prost = "0.6"
prost-types = "0.6"

[dependencies.ledger]
package = "ledger-transport-hid"
git = "https://github.com/Zondax/ledger-rs.git"
branch = "master"

[build-dependencies]
prost = "0.6"
prost-build = "0.6"
tonic = "0.3.1"
tonic-build = "0.3.1"
regex = "1"
tempdir = "0.3"
walkdir = "2"

[[example]]
name = "amino"
path = "examples/example_amino.rs"
required-features = ["amino"]

[[example]]
name = "protobuf"
path = "examples/example_protobuf.rs"
required-features = ["grpc"]

[dev-dependencies]
env_logger = "0.8.2"

[features]
default = ["amino"]
amino = []
grpc = []
